--- a/config/enhancer_stage1.yaml
+++ b/config/enhancer_stage1.yaml
@@ -1,4 +1,8 @@
 lcfm_training_mode: ae
 load_fg_only: true
-batch_size_per_gpu: 16
+batch_size_per_gpu: 4
 denoiser_run_dir: runs/denoiser
+
+# Checkpointing
+checkpoint_every_steps: 5000
+save_top_n: 3
