--- a/config/enhancer_stage2.yaml
+++ b/config/enhancer_stage2.yaml
@@ -1,8 +1,12 @@
 lcfm_training_mode: cfm
-batch_size_per_gpu: 32
+batch_size_per_gpu: 4
 training_seconds: 3.0
 gan_training_start_step: null
 lcfm_z_scale: 6
 praat_augment_prob: 0.2
 denoiser_run_dir: runs/denoiser
 enhancer_stage1_run_dir: runs/enhancer_stage1
+
+# Checkpointing
+checkpoint_every_steps: 10_000
+save_top_n: 3
